--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "pheprofile.png"
   name             : "Phelipe Darc"
   pronouns         : # example: "she/her"  
-  bio              : "🌌 Astrophysics | 🤖 Deep Learning & AI | 🌠 Cosmology | 🛰️ Multi-Messenger Astronomy"
+  bio              : "🌌 Astrophysics | 🤖 Deep Learning & AI | 🛰️ Multi-Messenger Astronomy"
   location         : "Rio de Janeiro, Brazil"
-  employer         : "Centro Brasileiro De Pesquisas Físicas (CBPF)"
+  employer         : "Centro Brasileiro De Pesquisas Físicas"
   uri              : # URL
   email            : "phelipedarc@gmail.com" 
 
