--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,9 @@ main:
     
   - title: "AI-CV"
     url: /files/CV_2024_Phelipe_ML.pdf
+  
+  - title: "Master's Thesis"
+    url: /files/thesisPHelipe.pdf
         
   # - title: "Blog Posts"
   #   url: /year-archive/
