--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /files/CV_2024_Phelipe_ML.pdf
   
   - title: "Master's Thesis"
-    url: /files/thesisPHelipe.pdf
+    url: /files/ThesisPhelipe.pdf
         
   # - title: "Blog Posts"
   #   url: /year-archive/
